--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "name": "nevinha-site",
   "version": "0.0.0",
   "scripts": {
-    "start": "electric"
+    "start": "electric",
+    "nevinha": "webpack --watch"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "electric-cli": "^2.2.0",
     "electric-marble-components": "^4.0.0",
     "marble": "~3.1.3",
     "marble-topbar": "^1.0.0",
-    "moment": "^2.19.2"
+    "moment": "^2.19.2",
+    "webpack": "^3.4.1"
   },
   "dependencies": {
-    "clipboard": "^2.0.1"
+    "clipboard": "^2.0.1",
+    "nevinha-js": "^0.5.3"
   }
 }
